[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/ArenaBackgrounds/City/art/stadium_foreground.png" type="Texture" id=1]
[ext_resource path="res://Assets/ArenaBackgrounds/City/art/stadium_background.png" type="Texture" id=2]
[ext_resource path="res://Assets/ArenaBackgrounds/City/art/stadium_lights_on.png" type="Texture" id=3]
[ext_resource path="res://GameComponents/ArenaBackgrounds/City/scenes/city_stadium.gd" type="Script" id=4]

[node name="CityStadium" type="Node2D"]
script = ExtResource( 4 )

[node name="BackLayer" type="Sprite" parent="."]
position = Vector2( 0, -52 )
texture = ExtResource( 2 )

[node name="StadiumLights" type="Node2D" parent="."]

[node name="Light0" type="Sprite" parent="StadiumLights"]
position = Vector2( -83, -93 )
texture = ExtResource( 3 )

[node name="Light1" type="Sprite" parent="StadiumLights"]
position = Vector2( -37, -97 )
texture = ExtResource( 3 )

[node name="Light2" type="Sprite" parent="StadiumLights"]
position = Vector2( 5, -101 )
texture = ExtResource( 3 )

[node name="Light3" type="Sprite" parent="StadiumLights"]
position = Vector2( 47, -97 )
texture = ExtResource( 3 )

[node name="Light4" type="Sprite" parent="StadiumLights"]
position = Vector2( 93, -93 )
texture = ExtResource( 3 )

[node name="GlowLight" type="Sprite" parent="."]
position = Vector2( 0, -57 )
scale = Vector2( 3, 2 )
texture = ExtResource( 3 )

[node name="FrontLayer" type="Sprite" parent="."]
position = Vector2( 0, -52 )
texture = ExtResource( 1 )
